--- a/HTML-Final-Assignment/HTML-Final-Assignment-about.html
+++ b/HTML-Final-Assignment/HTML-Final-Assignment-about.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@200&display=swap" rel="stylesheet">
     <title>HTML Final Assignment - About</title>
     <style>
         header {
@@ -51,10 +54,15 @@
             font-size: 16px;
 
         }
-        .container{
+
+        .container {
             border: 2px solid green;
-            height: 336px;
-            width: 990px;
+            height: 200px;
+            width: 870px;
+            font-size: 17px;
+            font-family: 'Sofia Sans', sans-serif;
+            display: inline-block;
+            margin-top: 25px;
         }
 
         .profile {
@@ -62,11 +70,50 @@
             display: inline-block;
             position: absolute;
             right: 10px;
+            margin-top: 25px;
         }
-        .profile img{
-            height: 100px;
-            width: 50px;
+
+        .profile img {
+            height: 200px;
+            width: 112px;
         }
+
+        .container-2 {
+            border: 2px solid blue;
+            height: 260px;
+            width: 988px;
+            font-size: 17px;
+            font-family: 'Sofia Sans', sans-serif;
+            display: inline-block;
+            margin-top: 15px;
+        }
+
+        .video {
+            border: 2px solid black;
+            background-color: #c1cfc6;
+            margin-top: 30px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 600px;
+            border-radius: 100px;
+        }
+
+        .video iframe {
+            border: 2px solid black;
+        }
+        .footer {
+            /* border: 2px solid brown; */
+            text-align: center;
+            background-color: #c1cfc6;
+            width: 99%;
+            border-radius: 5px;
+            margin: 0px auto;
+            font-size: 16px;
+            font-family: 'Sofia Sans', sans-serif;
+            margin-top: 5px;
+        }
+
     </style>
 </head>
 
@@ -86,12 +133,52 @@
 
     </header>
     <div class="container">
-        container
-        <div class="profile">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/PIAIC_Logo.svg/220px-PIAIC_Logo.svg.png"
-                alt="piaic">
-        </div>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, ex molestias. Maxime adipisci totam illo
+        accusantium quasi perferendis! Recusandae doloribus suscipit eligendi alias sint esse quos possimus optio qui
+        cupiditate Lorem ipsum dolor, sit amet consectetur adipisicing elit. Veniam facilis autem vero corporis
+        quibusdam perferendis esse dolor pariatur sunt officia, inventore assumenda soluta asperiores nemo blanditiis
+        voluptates a saepe, natus et. Cumque impedit saepe, facere iste ab veniam accusantium assumenda quisquam ducimus
+        porro exercitationem, illum atque? Accusamus tempora pariatur suscipit Lorem ipsum dolor sit amet consectetur
+        adipisicing elit. Doloremque necessitatibus perspiciatis blanditiis alias sapiente facilis in fuga provident
+        consequuntur animi. Voluptates corrupti voluptatem, minima, excepturi fuga aperiam mollitia libero error amet
+        soluta eaque architecto ab praesentium perferendis fugit quod! Atque magnam architecto delectus blanditiis
+        veniam incidunt deleniti nostrum ipsum ipsa Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab,
+        dignissimos.
     </div>
+    <div class="profile">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/PIAIC_Logo.svg/220px-PIAIC_Logo.svg.png"
+            alt="piaic">
+
+    </div>
+    <div class="container-2">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem, vero labore voluptates quos odit doloremque
+        porro maiores quae aspernatur ab rerum cum dolorum sit dolorem inventore delectus vel tempora numquam iure ea?
+        Porro quod similique, ipsum iste ipsam nesciunt dolorem. Quasi minima officia necessitatibus porro laborum
+        velit, repellat iste id sapiente neque error atque deleniti repellendus alias et esse, fugiat quam eum! Corporis
+        nulla at voluptates vero recusandae quis rerum repudiandae nihil blanditiis optio dicta dolorum commodi, nisi
+        ullam eos beatae molestias et quam? Aliquid id soluta ducimus sunt corrupti! Ullam eos iusto reprehenderit iure,
+        dolor illum odio reiciendis rerum.
+        <ul>
+            <li>Linux</li>
+            <li>Docker</li>
+            <li>Kubernetes</li>
+            <li>HTML</li>
+            <li>CSS</li>
+            <li>JavaScript</li>
+        </ul>
+    </div>
+    <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/XHOmBV4js_E" title="YouTube video player"
+            frameborder="5"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+            allowfullscreen></iframe>
+    </div>
+    <footer>
+        <div class="footer">
+            Copyright &#169; 2019. All rights reserved.
+        </div>
+    </footer>
+
 </body>
 
 </html>
