updated about page

--- a/HTML-Final-Assignment/HTML-Final-Assignment-about.html
+++ b/HTML-Final-Assignment/HTML-Final-Assignment-about.html
@@ -56,7 +56,7 @@
         }
 
         .container {
-            border: 2px solid green;
+            /* border: 2px solid green; */
             height: 200px;
             width: 870px;
             font-size: 17px;
@@ -66,7 +66,7 @@
         }
 
         .profile {
-            border: 2px solid black;
+            /* border: 2px solid black; */
             display: inline-block;
             position: absolute;
             right: 10px;
@@ -79,7 +79,7 @@
         }
 
         .container-2 {
-            border: 2px solid blue;
+            /* border: 2px solid blue; */
             height: 260px;
             width: 988px;
             font-size: 17px;
