--- a/HTML-Final-Assignment/HTML-final-assignment-portfolio page.html
+++ b/HTML-Final-Assignment/HTML-final-assignment-portfolio page.html
@@ -142,10 +142,10 @@
         </div>
         <div class="mid">
             <ul class="navbar">
-                <li><a href="#">HOME</a></li>
-                <li><a href="#">ABOUT</a></li>
-                <li><a href="#">PORTFOLIO</a></li>
-                <li><a href="#">CONTACT</a></li>
+                <li><a href="HTML-final-assignment-home.html">HOME</a></li>
+                <li><a href="HTML-Final-Assignment-about.html">ABOUT</a></li>
+                <li><a href="HTML-final-assignment-portfolio page.html">PORTFOLIO</a></li>
+                <li><a href="HTML-final-assignment-contact.html">CONTACT</a></li>
             </ul>
         </div>
     </header>
