completed final assignment

--- a/HTML-Final-Assignment/HTML-final-assignment-home.html
+++ b/HTML-Final-Assignment/HTML-final-assignment-home.html
@@ -7,7 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies&display=swap" rel="stylesheet">
+
     <title>HTML Final Assignment - Home</title>
     <style>
         header {
@@ -39,6 +44,7 @@
 
         .navbar {
             display: inline-block;
+            width: 500px;
         }
 
         .navbar li {
@@ -52,6 +58,7 @@
             text-decoration: none;
             color: black;
             font-size: 16px;
+            font-family: 'Rowdies', cursive;
 
         }
 
@@ -61,12 +68,13 @@
             height: 500px;
             font-size: 17px;
             text-align: center;
-            font-family: 'Sofia Sans', sans-serif;
+            font-family: 'Kanit', sans-serif;
+            background-color: #dee5e0;
         }
 
         .container img {
             height: 300px;
-            width: 1000px;
+            width: 993px;
             margin: 2px auto;
         }
 
@@ -78,7 +86,12 @@
             border-radius: 5px;
             margin: 0px auto;
             font-size: 16px;
-            font-family: 'Sofia Sans', sans-serif;
+
+        }
+
+        .navbar li a:hover {
+            text-decoration: underline;
+            color: black;
         }
     </style>
 </head>
@@ -90,10 +103,10 @@
         </div>
         <div class="mid">
             <ul class="navbar">
-                <li><a href="HTML-final-assignment-home.html">HOME</a></li>
-                <li><a href="HTML-Final-Assignment-about.html">ABOUT</a></li>
-                <li><a href="HTML-final-assignment-portfolio page.html">PORTFOLIO</a></li>
-                <li><a href="HTML-final-assignment-contact.html">CONTACT</a></li>
+                <li><a href="HTML-final-assignment-home.html" target="_blank">HOME</a></li>
+                <li><a href="HTML-Final-Assignment-about.html" target="_blank">ABOUT</a></li>
+                <li><a href="HTML-final-assignment-portfolio page.html" target="_blank">PORTFOLIO</a></li>
+                <li><a href="HTML-final-assignment-contact.html" target>CONTACT</a></li>
             </ul>
         </div>
 
@@ -108,11 +121,8 @@
             provident distinctio, aliquam fugit accusamus dolore assumenda voluptate consectetur incidunt. Eius, omnis
             asperiores exercitationem a harum atque laborum, quia sunt placeat facilis mollitia! Commodi pariatur id,
             tempora rem a impedit dolorem alias cum odit, quam et ipsam. Totam autem obcaecati dolorum doloribus
-            voluptatum, veniam et! Aspernatur, odit iste eos laborum officia unde. Nesciunt exercitationem nobis non
-            quia corrupti reprehenderit. Eius numquam vero at facilis libero exercitationem laborum, quod quis placeat
-            in alias hic consectetur accusamus omnis nisi a? Debitis, corporis rerum quidem voluptates quasi iste,
-            provident cupiditate doloremque id quos dolorum. Voluptate, assumenda sint labore veniam corporis reiciendis
-            alias.</figcaption>
+            voluptatum, veniam et! Aspernatur, odit iste eos laborum
+            .</figcaption>
     </div>
     <footer>
         <div class="footer">
