--- a/HTML-Final-Assignment/HTML-Final-Assignment-about.html
+++ b/HTML-Final-Assignment/HTML-Final-Assignment-about.html
@@ -7,7 +7,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies&display=swap" rel="stylesheet">
+
+
     <title>HTML Final Assignment - About</title>
     <style>
         header {
@@ -39,6 +45,7 @@
 
         .navbar {
             display: inline-block;
+            width: 500px;
         }
 
         .navbar li {
@@ -52,6 +59,7 @@
             text-decoration: none;
             color: black;
             font-size: 16px;
+            font-family: 'Rowdies', cursive;
 
         }
 
@@ -60,17 +68,20 @@
             height: 200px;
             width: 870px;
             font-size: 17px;
-            font-family: 'Sofia Sans', sans-serif;
+            font-family: 'Kanit', sans-serif;
             display: inline-block;
             margin-top: 25px;
+            background-color: #dee5e0;
         }
 
         .profile {
             /* border: 2px solid black; */
             display: inline-block;
             position: absolute;
-            right: 10px;
+            right: 12px;
             margin-top: 25px;
+            background-color: #dee5e0;
+            width: 123px;
         }
 
         .profile img {
@@ -80,17 +91,18 @@
 
         .container-2 {
             /* border: 2px solid blue; */
-            height: 260px;
+            height: 280px;
             width: 988px;
             font-size: 17px;
-            font-family: 'Sofia Sans', sans-serif;
+            font-family: 'Kanit', sans-serif;
             display: inline-block;
-            margin-top: 15px;
+            margin-top: 0px;
+            background-color: #dee5e0;
         }
 
         .video {
             border: 2px solid black;
-            background-color: #c1cfc6;
+            background-color: #dee5e0;
             margin-top: 30px;
             display: flex;
             justify-content: center;
@@ -110,7 +122,7 @@
             border-radius: 5px;
             margin: 0px auto;
             font-size: 16px;
-            font-family: 'Sofia Sans', sans-serif;
+            font-family: 'Kanit', sans-serif;
             margin-top: 5px;
         }
 
@@ -124,10 +136,10 @@
         </div>
         <div class="mid">
             <ul class="navbar">
-                <li><a href="HTML-final-assignment-home.html">HOME</a></li>
-                <li><a href="HTML-Final-Assignment-about.html">ABOUT</a></li>
-                <li><a href="HTML-final-assignment-portfolio page.html">PORTFOLIO</a></li>
-                <li><a href="HTML-final-assignment-contact.html">CONTACT</a></li>
+                <li><a href="HTML-final-assignment-home.html" target="_blank">HOME</a></li>
+                <li><a href="HTML-Final-Assignment-about.html" target="_blank">ABOUT</a></li>
+                <li><a href="HTML-final-assignment-portfolio page.html" target="_blank">PORTFOLIO</a></li>
+                <li><a href="HTML-final-assignment-contact.html" target>CONTACT</a></li>
             </ul>
         </div>
 
@@ -140,10 +152,7 @@
         voluptates a saepe, natus et. Cumque impedit saepe, facere iste ab veniam accusantium assumenda quisquam ducimus
         porro exercitationem, illum atque? Accusamus tempora pariatur suscipit Lorem ipsum dolor sit amet consectetur
         adipisicing elit. Doloremque necessitatibus perspiciatis blanditiis alias sapiente facilis in fuga provident
-        consequuntur animi. Voluptates corrupti voluptatem, minima, excepturi fuga aperiam mollitia libero error amet
-        soluta eaque architecto ab praesentium perferendis fugit quod! Atque magnam architecto delectus blanditiis
-        veniam incidunt deleniti nostrum ipsum ipsa Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ab,
-        dignissimos.
+        .
     </div>
     <div class="profile">
         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/PIAIC_Logo.svg/220px-PIAIC_Logo.svg.png"
@@ -155,9 +164,7 @@
         porro maiores quae aspernatur ab rerum cum dolorum sit dolorem inventore delectus vel tempora numquam iure ea?
         Porro quod similique, ipsum iste ipsam nesciunt dolorem. Quasi minima officia necessitatibus porro laborum
         velit, repellat iste id sapiente neque error atque deleniti repellendus alias et esse, fugiat quam eum! Corporis
-        nulla at voluptates vero recusandae quis rerum repudiandae nihil blanditiis optio dicta dolorum commodi, nisi
-        ullam eos beatae molestias et quam? Aliquid id soluta ducimus sunt corrupti! Ullam eos iusto reprehenderit iure,
-        dolor illum odio reiciendis rerum.
+        .
         <ul>
             <li>Linux</li>
             <li>Docker</li>
