--- a/HTML-Final-Assignment/HTML-final-assignment-contact.html
+++ b/HTML-Final-Assignment/HTML-final-assignment-contact.html
@@ -5,8 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Sofia+Sans:wght@200&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@300&display=swap" rel="stylesheet">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies&display=swap" rel="stylesheet">
+
     <title>HTML Final Assignment - Contact</title>
     <style>
         header {
@@ -38,6 +44,7 @@
 
         .navbar {
             display: inline-block;
+            width: 500px;
         }
 
         .navbar li {
@@ -51,6 +58,8 @@
             text-decoration: none;
             color: black;
             font-size: 16px;
+            font-family: 'Rowdies', cursive;
+
 
         }
 
@@ -62,14 +71,14 @@
             border-radius: 5px;
             margin: 0px auto;
             font-size: 16px;
-            font-family: 'Sofia Sans', sans-serif;
+            font-family: 'Kanit', sans-serif;
             margin-top: 5px;
         }
 
 
         .map {
             border: 2px solid black;
-            background-color: #c1cfc6;
+            background-color: #dee5e0;
             margin-top: 30px;
             display: flex;
             justify-content: center;
@@ -82,13 +91,25 @@
             text-align: center;
             margin-top: 5px;
             border-radius: 5px;
+            font-family: 'Kanit', sans-serif;
+            background-color: #dee5e0;
+
         }
         .review{
             text-align: center;
             margin-top: 5px;
             border-radius: 5px;
+            font-family: 'Kanit', sans-serif;
+            background-color: #dee5e0;
 
         }
+        .details input{
+            font-size: 14px;
+        }
+        .review input{
+            font-size: 14px;
+        }
+        
     </style>
 </head>
 
@@ -99,10 +120,10 @@
         </div>
         <div class="mid">
             <ul class="navbar">
-                <li><a href="HTML-final-assignment-home.html">HOME</a></li>
-                <li><a href="HTML-Final-Assignment-about.html">ABOUT</a></li>
-                <li><a href="HTML-final-assignment-portfolio page.html">PORTFOLIO</a></li>
-                <li><a href="HTML-final-assignment-contact.html">CONTACT</a></li>
+                <li><a href="HTML-final-assignment-home.html" target="_blank">HOME</a></li>
+                <li><a href="HTML-Final-Assignment-about.html" target="_blank">ABOUT</a></li>
+                <li><a href="HTML-final-assignment-portfolio page.html" target="_blank">PORTFOLIO</a></li>
+                <li><a href="HTML-final-assignment-contact.html" target>CONTACT</a></li>
             </ul>
         </div>
     </header>
@@ -140,8 +161,8 @@
                 Maybe <input type="radio" name="visit-again">
                 <div>
                     <div>
-                        <p>Comments:</p>
-                        <textarea name="" id="comments" cols="30" rows="10">Comments</textarea>
+                        <p> <strong> Comments:</strong></p>
+                        <textarea name="" id="comments" cols="30" rows="10" placeholder="Type your comments here.."></textarea>
                     </div>
                     <div>
                         <input type="checkbox" name="SignUp" id="signup" checked>Sign me up for email updates
