--- a/HTML-Final-Assignment/HTML-final-assignment-home.html
+++ b/HTML-Final-Assignment/HTML-final-assignment-home.html
@@ -86,6 +86,7 @@
             border-radius: 5px;
             margin: 0px auto;
             font-size: 16px;
+            font-family: 'Kanit', sans-serif;
 
         }
 
