added facebook logo to topbar

--- a/CSS-Company-Portfolio/index.html
+++ b/CSS-Company-Portfolio/index.html
@@ -1,15 +1,64 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pana Cloud</title>
+    <title>PanaCloud</title>
     <style>
-        
+        body{
+            margin: 0px;
+            padding: 0px;
+        }
+        .topbar{
+            border: 2px solid red;
+            height: 40px;
+            background: black;
+        }
+        .lowerbar{
+            border: 2px solid blue;
+            height: 60px;
+
+        }
+        .main{
+            border: 2px solid brown;
+            height: 524px;
+
+        }
+
+        .topbar ul li img{
+            width: 20px;
+            height: 20px;
+        }
+
+        .topbar ul li{
+            display: inline-block;
+        }
+
     </style>
 </head>
+
 <body>
-    
+    <header>
+        <div class="topbar">
+            <ul>
+                <li><img src="facebook logo.png" alt="facebook logo"></li>
+                <li><img src="" alt=""></li>
+                <li></li>
+                <li></li>
+                <li></li>
+            </ul>
+        </div>
+
+        <div class="lowerbar">
+            lowerbar
+        </div>
+    </header>
+    <div class="main">
+        main box
+    </div>
+
 </body>
+
 </html>
