--- a/CSS-Company-Portfolio/index.html
+++ b/CSS-Company-Portfolio/index.html
@@ -30,11 +30,19 @@
         .topbar ul li img{
             width: 20px;
             height: 20px;
+            filter: invert(100);
         }
 
         .topbar ul li{
-            display: inline-block;
+            display: inline-flex;
         }
+        .logos{
+            margin-bottom: 5px;
+            display: inline-block;
+            position: absolute;
+            top: -4px;
+        }
+
 
     </style>
 </head>
@@ -42,12 +50,12 @@
 <body>
     <header>
         <div class="topbar">
-            <ul>
+            <ul class="logos">
                 <li><img src="facebook logo.png" alt="facebook logo"></li>
-                <li><img src="" alt=""></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li><img src="twitter logo.png" alt="twitter logo"></li>
+                <li><img src="google logo.png" alt="google logo"></li>
+                <li><img src="linkedin logo.jpg" alt="linkedin logo"></li>
+                <li><img src="youtube logo.png" alt="youtube logo"></li>
             </ul>
         </div>
 
