--- a/CSS-Company-Portfolio/index.html
+++ b/CSS-Company-Portfolio/index.html
@@ -5,66 +5,271 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@700&display=swap" rel="stylesheet">
     <title>PanaCloud</title>
     <style>
-        body{
+        body {
             margin: 0px;
             padding: 0px;
+            font-family: 'Baloo Bhai 2', cursive;
+
         }
-        .topbar{
-            border: 2px solid red;
+
+        .topbar {
+            /* border: 2px solid red; */
             height: 40px;
-            background: black;
+            background: #202020;
         }
-        .lowerbar{
-            border: 2px solid blue;
+
+        .lowerbar {
+            /* border: 2px solid blue; */
             height: 60px;
-
-        }
-        .main{
-            border: 2px solid brown;
-            height: 524px;
+            margin-top: 2px;
 
         }
 
-        .topbar ul li img{
+        .main {
+            /* border: 2px solid brown; */
+            height: 530px;
+
+        }
+
+        .topbar ul li img {
             width: 20px;
             height: 20px;
             filter: invert(100);
         }
 
-        .topbar ul li{
+        .topbar ul li {
             display: inline-flex;
         }
-        .logos{
+
+        .logos {
             margin-bottom: 5px;
             display: inline-block;
             position: absolute;
             top: -4px;
+            /* border: 2px solid yellow; */
         }
 
+        .phNumbers {
+            color: white;
+            /* border: 2px solid white; */
+            display: inline-block;
+            position: absolute;
+            left: 520px;
+            top: 12px;
+            width: 14%;
+            height: 20px;
+        }
 
+        .phNumbers img {
+            width: 20px;
+            height: 20px;
+            position: relative;
+            top: -2px;
+        }
+
+        .phNumbers a {
+            text-decoration: none;
+            color: white;
+            font-weight: 100;
+            position: absolute;
+            bottom: 0px;
+        }
+
+        .phNumbers2 {
+            color: white;
+            /* border: 2px solid white; */
+            display: inline-block;
+            position: absolute;
+            left: 670px;
+            top: 12px;
+            width: 14%;
+            height: 20px;
+        }
+
+        .phNumbers2 img {
+            width: 20px;
+            height: 20px;
+            position: relative;
+            top: -2px;
+        }
+
+        .phNumbers2 a {
+            text-decoration: none;
+            color: white;
+            font-weight: 100;
+            position: absolute;
+            bottom: 0px;
+        }
+
+        .btn {
+            position: absolute;
+            left: 850px;
+            width: 130px;
+            height: 30px;
+            top: 5px;
+            background-color: greenyellow;
+            border: 2px solid black;
+            font-family: 'Baloo Bhai 2', cursive;
+            border-radius: 5px;
+
+        }
+
+        /* styling for navbar */
+        .logo {
+            /* border: 2px solid blue; */
+            display: inline-block;
+            position: relative;
+            left: 40px;
+        }
+
+        .logo img {
+            width: 116px;
+            height: 55px;
+
+        }
+
+        .navbox {
+            /* border: 2px solid purple; */
+            display: inline-block;
+            position: relative;
+            left: 36px;
+            width: 84%;
+            top: -22px;
+        }
+
+        .navbar {
+            /* border: 2px solid yellow; */
+            text-align: center;
+            position: relative;
+            right: -94px;
+            width: 700px;
+        }
+
+        .navbar li {
+            display: inline-block;
+            margin: 4px;
+            padding: 3px;
+            font-size: 14px;
+        }
+        .navbar li a {
+            color: black;
+            text-decoration: none;
+        }
+        .navbar li a:hover{
+            color: rgb(30, 128, 11);
+            text-decoration:underline;
+        }
+
+        /* styling for mainbox */
+        .main {
+            background-image: url(background.jpg);
+        }
+
+        .main img {
+            height: 400px;
+            width: 400px;
+        }
+
+        .maintext {
+            display: inline-block;
+            /* border: 2px solid black; */
+            position: relative;
+            font-size: 50px;
+            width: 50%;
+            left: 253px;
+            top: 120px;
+            text-align: center;
+            font-family: 'Baloo Bhai 2', cursive;
+        }
+
+        .text {
+            /* border: 2px solid black; */
+            position: relative;
+            width: 70%;
+            left: 160px;
+            top: 130px;
+            text-align: center;
+            font-family: 'Baloo Bhai 2', cursive;
+        }
+
+        .lowerbtn {
+            position: absolute;
+            left: 446px;
+            width: 130px;
+            height: 30px;
+            top: 500px;
+            background-color: #f5da16;
+            border: 2px solid black;
+            font-family: 'Baloo Bhai 2', cursive;
+            text-align: center;
+            font-size: 17px;
+            padding: 3px;
+            border-radius: 5px;
+        }
     </style>
 </head>
 
 <body>
     <header>
         <div class="topbar">
-            <ul class="logos">
-                <li><img src="facebook logo.png" alt="facebook logo"></li>
-                <li><img src="twitter logo.png" alt="twitter logo"></li>
-                <li><img src="google logo.png" alt="google logo"></li>
-                <li><img src="linkedin logo.jpg" alt="linkedin logo"></li>
-                <li><img src="youtube logo.png" alt="youtube logo"></li>
-            </ul>
+            <div class="topbar-logos">
+                <ul class="logos">
+                    <li><a href="https://www.facebook.com/panacloud/"><img src="facebook logo.png" alt="facebook logo"></li></a>
+                    <li><a href="https://twitter.com/Panacloud"><img src="twitter logo.png" alt="twitter logo"></li></a>
+                    <li><a href="https://www.google.com/search?q=panacloud&sxsrf=AJOqlzVb-qZPyEI4ZV3P_6a8aHJxwpCtaQ:1674542496436&source=lnms&sa=X&ved=2ahUKEwjq96T1zN_8AhXLDuwKHe5dD80Q_AUoAHoECAIQAg&biw=1024&bih=636&dpr=1"><img src="google logo.png" alt="google logo"></li></a>
+                    <li><a href="https://www.linkedin.com/company/panacloud-pvt-ltd/"><img src="linkedin logo.jpg" alt="linkedin logo"></li></a>
+                    <li><a href="https://www.youtube.com/@panacloudserverlesssaastra6459/featured"><img src="youtube logo.png" alt="youtube logo"></li></a>
+                </ul>
+            </div>
+            <div class="phNumbers">
+                <img src="phone icon.png" alt="phone"><a href="+92(304)36-6719">+92(304)36-6719
+                </a>
+            </div>
+
+            <div class="phNumbers2">
+                <img src="phone icon.png" alt="phone"><a href="+92(304)36-6719">+92(304)36-6719
+                </a>
+            </div>
+            <button class="btn">
+                CALL ME BACK
+            </button>
         </div>
 
         <div class="lowerbar">
-            lowerbar
+            <div class="logo">
+                <img src="logo.png" alt="PanaCloud">
+            </div>
+            <div class="navbox">
+                <ul class="navbar">
+                    <li> <a href="#">WHY US</a> </li>
+                    <li> <a href="#">ABOUT</a> </li>
+                    <li> <a href="#">SERVICES</a> </li>
+                    <li> <a href="#">PORTFOLIO</a> </li>
+                    <li> <a href="#">PROCESS</a> </li>
+                    <li> <a href="#">REVIEWS</a> </li>
+                    <li> <a href="#">OUR SKILLS</a> </li>
+                    <li> <a href="#">CONTACT US</a> </li>
+                </ul>
+            </div>
         </div>
     </header>
     <div class="main">
-        main box
+        <div class="maintext">
+            WE ARE EXPERTS
+        </div>
+        <div class="text">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid veritatis omnis obcaecati nemo?
+                Excepturi mollitia et reprehenderit doloribus Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                Deserunt, nulla. .</p>
+        </div>
+        <div class="lowerbtn">
+           <a href="#">READ MORE</a> 
+        </div>
     </div>
 
 </body>
