--- a/CSS-Company-Portfolio/index.html
+++ b/CSS-Company-Portfolio/index.html
@@ -211,6 +211,14 @@
             padding: 3px;
             border-radius: 5px;
         }
+        .lowerbtn a{
+            color: black;
+            text-decoration: none; 
+        }
+        .lowerbtn a:hover{
+            color: black;
+            text-decoration:underline;
+        }
     </style>
 </head>
 
