--- a/CSS-Company-Portfolio/whyUs.html
+++ b/CSS-Company-Portfolio/whyUs.html
@@ -8,12 +8,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@700&display=swap" rel="stylesheet">
-    <title>PanaCloud</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <title>Advantages-PanaCloud</title>
     <style>
         body {
             margin: 0px;
             padding: 0px;
-            font-family: 'Baloo Bhai 2', cursive;
+
 
         }
 
@@ -21,21 +24,19 @@
             /* border: 2px solid red; */
             height: 40px;
             background: #202020;
+            font-family: 'Baloo Bhai 2', cursive;
+
         }
 
         .lowerbar {
             /* border: 2px solid blue; */
             height: 60px;
             margin-top: 2px;
-            
+            font-family: 'Baloo Bhai 2', cursive;
+            border-bottom: 2px solid black;
 
         }
 
-        .main {
-            /* border: 2px solid brown; */
-            height: 530px;
-
-        }
 
         .topbar ul li img {
             width: 20px;
@@ -45,6 +46,8 @@
 
         .topbar ul li {
             display: inline-flex;
+
+
         }
 
         .logos {
@@ -64,6 +67,7 @@
             top: 12px;
             width: 14%;
             height: 20px;
+
         }
 
         .phNumbers img {
@@ -79,6 +83,7 @@
             font-weight: 100;
             position: absolute;
             bottom: 0px;
+
         }
 
         .phNumbers2 {
@@ -90,6 +95,7 @@
             top: 12px;
             width: 14%;
             height: 20px;
+
         }
 
         .phNumbers2 img {
@@ -105,6 +111,7 @@
             font-weight: 100;
             position: absolute;
             bottom: 0px;
+
         }
 
         .btn {
@@ -117,6 +124,7 @@
             border: 2px solid black;
             font-family: 'Baloo Bhai 2', cursive;
             border-radius: 5px;
+
 
         }
 
@@ -156,69 +164,69 @@
             margin: 4px;
             padding: 3px;
             font-size: 14px;
+
+
         }
+
         .navbar li a {
             color: black;
             text-decoration: none;
         }
-        .navbar li a:hover{
+
+        .navbar li a:hover {
             color: rgb(30, 128, 11);
-            text-decoration:underline;
+            text-decoration: underline;
         }
 
-        /* styling for mainbox */
-        .main {
-            background-image: url(background.jpg);
-        }
-
-        .main img {
-            height: 400px;
-            width: 400px;
-        }
-
-        .maintext {
+        .top {
+            /* border: 2px solid red; */
             display: inline-block;
-            /* border: 2px solid black; */
-            position: relative;
-            font-size: 50px;
+            text-align: center;
             width: 50%;
-            left: 253px;
-            top: 120px;
-            text-align: center;
-            font-family: 'Baloo Bhai 2', cursive;
-        }
-
-        .text {
-            /* border: 2px solid black; */
             position: relative;
-            width: 70%;
-            left: 160px;
-            top: 130px;
-            text-align: center;
-            font-family: 'Baloo Bhai 2', cursive;
+            left: 250px;
+            height: 75px;
         }
 
-        .lowerbtn {
-            position: absolute;
-            left: 446px;
-            width: 130px;
-            height: 30px;
-            top: 500px;
-            background-color: #f5da16;
-            border: 2px solid black;
+        .top h1 {
+            font-size: 40px;
             font-family: 'Baloo Bhai 2', cursive;
+            color: #298529;
+        }
+
+        .toptext {
+            display: inline-block;
+            /* border: 2px solid blue; */
+            width: 75%;
+            position: relative;
+            left: 120px;
             text-align: center;
-            font-size: 17px;
-            padding: 3px;
-            border-radius: 5px;
+            font-family: 'Open Sans', sans-serif;
+
+
+
         }
-        .lowerbtn a{
-            color: black;
-            text-decoration: none; 
+
+        .mainbox {
+            /* border: 2px solid green; */
+            display: flex;
+            justify-content: space-around;
+            margin-top: 10px;
         }
-        .lowerbtn a:hover{
-            color: black;
-            text-decoration:underline;
+
+        .mainbox img{
+            /* border: 2px solid blueviolet; */
+        }
+
+        .imgtext {
+            text-align: center;
+            font-family: 'Open Sans', sans-serif;
+            width: 150px;
+
+        }
+
+        .imgtext h3 {
+            font-family: 'Baloo Bhai 2', cursive;
         }
     </style>
 </head>
@@ -228,11 +236,16 @@
         <div class="topbar">
             <div class="topbar-logos">
                 <ul class="logos">
-                    <li><a href="https://www.facebook.com/panacloud/" target="_blank"><img src="facebook logo.png" alt="facebook logo"  ></li></a>
-                    <li><a href="https://twitter.com/Panacloud" target="_blank"><img src="twitter logo.png" alt="twitter logo"></li></a>
-                    <li><a href="https://www.google.com/search?q=panacloud&sxsrf=AJOqlzVb-qZPyEI4ZV3P_6a8aHJxwpCtaQ:1674542496436&source=lnms&sa=X&ved=2ahUKEwjq96T1zN_8AhXLDuwKHe5dD80Q_AUoAHoECAIQAg&biw=1024&bih=636&dpr=1" target="_blank"><img src="google logo.png" alt="google logo"></li></a>
-                    <li><a href="https://www.linkedin.com/company/panacloud-pvt-ltd/" target="_blank"><img src="linkedin logo.jpg" alt="linkedin logo"></li></a>
-                    <li><a href="https://www.youtube.com/@panacloudserverlesssaastra6459/featured" target="_blank"><img src="youtube logo.png" alt="youtube logo"></li></a>
+                    <li><a href="https://www.facebook.com/panacloud/" target="_blank"><img src="facebook logo.png"
+                                alt="facebook logo"></li></a>
+                    <li><a href="https://twitter.com/Panacloud" target="_blank"><img src="twitter logo.png"
+                                alt="twitter logo"></li></a>
+                    <li><a href="https://www.google.com/search?q=panacloud&sxsrf=AJOqlzVb-qZPyEI4ZV3P_6a8aHJxwpCtaQ:1674542496436&source=lnms&sa=X&ved=2ahUKEwjq96T1zN_8AhXLDuwKHe5dD80Q_AUoAHoECAIQAg&biw=1024&bih=636&dpr=1"
+                            target="_blank"><img src="google logo.png" alt="google logo"></li></a>
+                    <li><a href="https://www.linkedin.com/company/panacloud-pvt-ltd/" target="_blank"><img
+                                src="linkedin logo.jpg" alt="linkedin logo"></li></a>
+                    <li><a href="https://www.youtube.com/@panacloudserverlesssaastra6459/featured" target="_blank"><img
+                                src="youtube logo.png" alt="youtube logo"></li></a>
                 </ul>
             </div>
             <div class="phNumbers">
@@ -267,20 +280,40 @@
             </div>
         </div>
     </header>
-    <div class="main">
-        <div class="maintext">
-            WE ARE EXPERTS
+    <div class="top">
+        <h1>OUR ADVANTAGES</h1>
+    </div>
+    <div class="toptext">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus laborum assumenda obcaecati id quaerat
+            nam aut sunt. Ipsa veniam nisi repellat porro obcaecati.</p>
+    </div>
+    <div class="mainbox">
+        <div class="imgtext">
+            <img src="bulb.png" alt="bulb">
+            <h3>INNOVATION</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing Lorem ipsum dolor sit amet.</p>
         </div>
-        <div class="text">
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid veritatis omnis obcaecati nemo?
-                Excepturi mollitia et reprehenderit doloribus Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                Deserunt, nulla. .</p>
+        <div class="imgtext">
+            <img src="thumbsup.png" alt="thumbsup">
+            <h3>QUALITY</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing Lorem ipsum dolor sit amet.</p>
         </div>
-        <div class="lowerbtn">
-           <a href="#">READ MORE</a> 
+        <div class="imgtext">
+            <img src="clock.png" alt="clock">
+            <h3>EXPERIENCE</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="imgtext">
+            <img src="clients.png" alt="clients">
+            <h3>HAPPY CLIENTS</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div class="imgtext">
+            <img src="support.png" alt="">
+            <h3>SUPPORT</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing Lorem ipsum dolor sit amet.</p>
         </div>
     </div>
-
 </body>
 
 </html>
