updated services page

--- a/CSS-Company-Portfolio/services.html
+++ b/CSS-Company-Portfolio/services.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,174 +8,263 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cabin&display=swap" rel="stylesheet">
     <title>Services-PanaCloud</title>
 </head>
 <style>
     body {
-            margin: 0px;
-            padding: 0px;
+        margin: 0px;
+        padding: 0px;
 
 
-        }
+    }
 
-        .topbar {
-            /* border: 2px solid red; */
-            height: 40px;
-            background: #202020;
-            font-family: 'Baloo Bhai 2', cursive;
+    .topbar {
+        /* border: 2px solid red; */
+        height: 40px;
+        background: #202020;
+        font-family: 'Baloo Bhai 2', cursive;
 
-        }
+    }
 
-        .lowerbar {
-            /* border: 2px solid blue; */
-            height: 60px;
-            margin-top: 2px;
-            font-family: 'Baloo Bhai 2', cursive;
-            border-bottom: 2px solid black;
+    .lowerbar {
+        /* border: 2px solid blue; */
+        height: 60px;
+        margin-top: 2px;
+        font-family: 'Baloo Bhai 2', cursive;
+        border-bottom: 2px solid black;
 
-        }
-
-
-        .topbar ul li img {
-            width: 20px;
-            height: 20px;
-            filter: invert(100);
-        }
-
-        .topbar ul li {
-            display: inline-flex;
+    }
 
 
-        }
+    .topbar ul li img {
+        width: 20px;
+        height: 20px;
+        filter: invert(100);
+    }
 
-        .logos {
-            margin-bottom: 5px;
-            display: inline-block;
-            position: absolute;
-            top: -4px;
-            /* border: 2px solid yellow; */
-        }
-
-        .phNumbers {
-            color: white;
-            /* border: 2px solid white; */
-            display: inline-block;
-            position: absolute;
-            left: 520px;
-            top: 12px;
-            width: 14%;
-            height: 20px;
-
-        }
-
-        .phNumbers img {
-            width: 20px;
-            height: 20px;
-            position: relative;
-            top: -2px;
-        }
-
-        .phNumbers a {
-            text-decoration: none;
-            color: white;
-            font-weight: 100;
-            position: absolute;
-            bottom: 0px;
-
-        }
-
-        .phNumbers2 {
-            color: white;
-            /* border: 2px solid white; */
-            display: inline-block;
-            position: absolute;
-            left: 670px;
-            top: 12px;
-            width: 14%;
-            height: 20px;
-
-        }
-
-        .phNumbers2 img {
-            width: 20px;
-            height: 20px;
-            position: relative;
-            top: -2px;
-        }
-
-        .phNumbers2 a {
-            text-decoration: none;
-            color: white;
-            font-weight: 100;
-            position: absolute;
-            bottom: 0px;
-
-        }
-
-        .btn {
-            position: absolute;
-            left: 850px;
-            width: 130px;
-            height: 30px;
-            top: 5px;
-            background-color: greenyellow;
-            border: 2px solid black;
-            font-family: 'Baloo Bhai 2', cursive;
-            border-radius: 5px;
+    .topbar ul li {
+        display: inline-flex;
 
 
-        }
+    }
 
-        /* styling for navbar */
-        .logo {
-            /* border: 2px solid blue; */
-            display: inline-block;
-            position: relative;
-            left: 40px;
-        }
+    .logos {
+        margin-bottom: 5px;
+        display: inline-block;
+        position: absolute;
+        top: -4px;
+        /* border: 2px solid yellow; */
+    }
 
-        .logo img {
-            width: 116px;
-            height: 55px;
+    .phNumbers {
+        color: white;
+        /* border: 2px solid white; */
+        display: inline-block;
+        position: absolute;
+        left: 520px;
+        top: 12px;
+        width: 14%;
+        height: 20px;
 
-        }
+    }
 
-        .navbox {
-            /* border: 2px solid purple; */
-            display: inline-block;
-            position: relative;
-            left: 36px;
-            width: 84%;
-            top: -22px;
-        }
+    .phNumbers img {
+        width: 20px;
+        height: 20px;
+        position: relative;
+        top: -2px;
+    }
 
-        .navbar {
-            /* border: 2px solid yellow; */
-            text-align: center;
-            position: relative;
-            right: -94px;
-            width: 700px;
-        }
+    .phNumbers a {
+        text-decoration: none;
+        color: white;
+        font-weight: 100;
+        position: absolute;
+        bottom: 0px;
 
-        .navbar li {
-            display: inline-block;
-            margin: 4px;
-            padding: 3px;
-            font-size: 14px;
+    }
+
+    .phNumbers2 {
+        color: white;
+        /* border: 2px solid white; */
+        display: inline-block;
+        position: absolute;
+        left: 670px;
+        top: 12px;
+        width: 14%;
+        height: 20px;
+
+    }
+
+    .phNumbers2 img {
+        width: 20px;
+        height: 20px;
+        position: relative;
+        top: -2px;
+    }
+
+    .phNumbers2 a {
+        text-decoration: none;
+        color: white;
+        font-weight: 100;
+        position: absolute;
+        bottom: 0px;
+
+    }
+
+    .btn {
+        position: absolute;
+        left: 850px;
+        width: 130px;
+        height: 30px;
+        top: 5px;
+        background-color: greenyellow;
+        border: 2px solid black;
+        font-family: 'Baloo Bhai 2', cursive;
+        border-radius: 5px;
 
 
-        }
+    }
 
-        .navbar li a {
-            color: black;
-            text-decoration: none;
-        }
+    /* styling for navbar */
+    .logo {
+        /* border: 2px solid blue; */
+        display: inline-block;
+        position: relative;
+        left: 40px;
+    }
 
-        .navbar li a:hover {
-            color: rgb(30, 128, 11);
-            text-decoration: underline;
-        }
+    .logo img {
+        width: 116px;
+        height: 55px;
+
+    }
+
+    .navbox {
+        /* border: 2px solid purple; */
+        display: inline-block;
+        position: relative;
+        left: 36px;
+        width: 84%;
+        top: -22px;
+    }
+
+    .navbar {
+        /* border: 2px solid yellow; */
+        text-align: center;
+        position: relative;
+        right: -94px;
+        width: 700px;
+    }
+
+    .navbar li {
+        display: inline-block;
+        margin: 4px;
+        padding: 3px;
+        font-size: 14px;
+
+
+    }
+
+    .navbar li a {
+        color: black;
+        text-decoration: none;
+    }
+
+    .navbar li a:hover {
+        color: rgb(30, 128, 11);
+        text-decoration: underline;
+    }
+
+    .top {
+        /* border: 2px solid red; */
+        display: inline-block;
+        text-align: center;
+        width: 50%;
+        position: relative;
+        left: 250px;
+        height: 75px;
+    }
+
+    .top h1 {
+        font-size: 40px;
+        font-family: 'Baloo Bhai 2', cursive;
+        color: #298529;
+    }
+
+    .toptext {
+        display: inline-block;
+        /* border: 2px solid blue; */
+        width: 75%;
+        position: relative;
+        left: 120px;
+        text-align: center;
+        font-family: 'Open Sans', sans-serif;
+    }
+
+    .mainbox {
+        /* border: 2px solid purple; */
+        display: flex;
+        justify-content: space-evenly;
+        margin-top: 60px;
+    }
+
+    .img-text {
+        /* border: 2px solid blue; */
+        position: relative;
+        width: 220px;
+        height: 230px;
+        background-color: #a9a9a93d;
+        border-radius: 5px;
+
+    }
+
+    .img-text h6 {
+        text-align: center;
+        font-family: 'Baloo Bhai 2', cursive;
+        font-size: 16px;
+        margin: 18px;
+        margin-top: -10px;
+
+    }
+
+    .img-text p {
+        text-align: center;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 15px;
+
+    }
+
+    .img-text a {
+        text-decoration: none;
+        text-align: center;
+        color: #298529;
+        position: relative;
+        left: 75px;
+        font-size: 15px;
+        font-family: 'Cabin', sans-serif;
+    }
+
+    .img-text img {
+        position: relative;
+        width: 60px;
+        height: 60px;
+        left: 81px;
+        top: -28px;
+        border-radius: 30px;
+    }
+
+    .img-text a:hover {
+        text-decoration: underline;
+    }
 </style>
+
 <body>
     <header>
         <div class="topbar">
@@ -224,5 +314,43 @@
             </div>
         </div>
     </header>
+    <div class="top">
+        <h1>OUR SERVICES</h1>
+    </div>
+    <div class="toptext">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus laborum assumenda obcaecati id quaerat
+            nam aut sunt. Ipsa veniam nisi repellat porro obcaecati.</p>
+    </div>
+    <div class="mainbox">
+        <div class="img-text">
+            <img src="star.png" alt="star">
+            <h6> WEB DESIGN</h6>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, maiores labore. Lorem ipsum dolor sit
+                amet. </p>
+            <a href="#">Read More</a>
+        </div>
+        <div class="img-text">
+            <img src="star.png" alt="star">
+            <h6> GRAPHIC DESIGN</h6>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, maiores labore. Lorem ipsum dolor sit
+                amet. </p>
+            <a href="#">Read More</a>
+        </div>
+        <div class="img-text">
+            <img src="star.png" alt="star">
+            <h6> BRANDING</h6>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, maiores labore. Lorem ipsum dolor sit
+                amet. </p>
+            <a href="#">Read More</a>
+        </div>
+        <div class="img-text">
+            <img src="star.png" alt="star">
+            <h6> MARKETING</h6>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, maiores labore. Lorem ipsum dolor sit
+                amet. </p>
+            <a href="#">Read More</a>
+        </div>
+    </div>
 </body>
+
 </html>
