updated skills page

--- a/CSS-Company-Portfolio/skills.html
+++ b/CSS-Company-Portfolio/skills.html
@@ -203,6 +203,18 @@
             text-align: center;
             font-family: 'Open Sans', sans-serif;
         }
+
+        .main {
+            /* border: 2px solid red; */
+            font-family: 'Open Sans', sans-serif;
+            display: flex;
+            justify-content: space-evenly;
+            margin-top: 50px;
+        }
+        .progress h4{
+            font-family: 'Baloo Bhai 2', cursive;
+            text-align: center;
+        }
     </style>
 </head>
 
@@ -262,6 +274,26 @@
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus laborum assumenda obcaecati id quaerat
             nam aut sunt. Ipsa veniam nisi repellat porro obcaecati.</p>
     </div>
+    <div class="main">
+        <div class="progress">
+            <img src="prog1.png" alt="progress1">
+            <h4>LOGO</h4>
+        </div>
+        <div class="progress">
+            <img src="prog2.png" alt="progress2">
+            <h4>SEO & ADS</h4>
+        </div>
+        <div class="progress">
+            <img src="prog3.png" alt="progress3">
+            <h4>BRANDING</h4>
+        </div>
+        <div class="progress">
+            <img src="prog4.png" alt="progress4">
+            <h4>WEB DESIGN</h4>
+        </div>
+    </div>
+
+
 </body>
 
 </html>
