updated contact page

--- a/CSS-Company-Portfolio/contact.html
+++ b/CSS-Company-Portfolio/contact.html
@@ -257,6 +257,59 @@
             position: absolute;
             left: 665px;
         }
+
+        .map {
+            /* border: 2px solid black; */
+            margin-top: 30px;
+            align-items: center;
+            height: 375px;
+        }
+
+        .end {
+            border: 2px solid green;
+        }
+
+        .end-logo {
+            border: 2px solid blue;
+            display: inline-block;
+        }
+
+        .end-logo img {
+            height: 55px;
+            width: 116px;
+        }
+
+        .end-text {
+            border: 2px solid purple;
+            display: block;
+            width: 152px;
+            height: 146px;
+        }
+
+        .end-services {
+            border: 2px solid red;
+            display: inline-block;
+            position: relative;
+            top: -213px;
+            left: 290px;
+        }
+
+        .endlinks {
+            border: 2px solid red;
+            display: inline-block;
+            position: relative;
+            top: -213px;
+            left: 290px;
+        }
+
+        .endcontacts {
+            border: 2px solid palevioletred;
+
+        }
+
+        .endlist {
+            display: inline;
+        }
     </style>
 </head>
 
@@ -331,6 +384,67 @@
     <div class="email">
         <img src="email.png" alt="email"> <a id="email" href="#">email@website.com
         </a>
+    </div>
+    <div class="map">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d462118.02491053584!2d67.15546194999999!3d25.193202399999997!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1674836320320!5m2!1sen!2s"
+            width="100%" height="375" style="border:0;" allowfullscreen="" loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
+    <div class="end">
+        <div class="end-logo">
+            <img src="logo.png" alt="logo"><br>
+        </div>
+        <div class="end-text">
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi labore, fugit ea quam sapiente quos
+                doloribus iusto beatae est quaerat?</p>
+        </div>
+        <div class="end-services">
+            <h4>SERVICES</h4>
+            <ul>
+                <li>Lorem</li>
+                <li>Lorem ipsum</li>
+                <li>Lorem ipsum dolor</li>
+                <li>Lorem</li>
+                <li>Lorem ipsum dolor</li>
+                <li>Lorem ipsum</li>
+                <li>Lorem</li>
+            </ul>
+        </div>
+        <div class="endlinks">
+            <h4>USEFUL LINKS</h4>
+            <ul>
+                <li>Lorem</li>
+                <li>Lorem ipsum</li>
+                <li>Lorem ipsum dolor</li>
+                <li>Lorem</li>
+                <li>Lorem ipsum dolor</li>
+                <li>Lorem ipsum</li>
+                <li>Lorem</li>
+            </ul>
+        </div>
+        <div class="endcontacts">
+            <ul>
+                <li class="endlist">
+                    <div class="num1">
+                        <img src="phone icon.png" alt="phone"><a id="num1" href="#">+92(304)36-6719
+                        </a>
+                    </div>
+                </li>
+                <li class="endlist">
+                    <div class="num2">
+                        <img src="phone icon.png" alt="phone"><a id="num2" href="#">+92(304)36-6719
+                        </a>
+                    </div>
+                </li>
+                <li class="endlist">
+                    <div class="email">
+                        <img src="email.png" alt="email"> <a id="email" href="#">email@website.com
+                        </a>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
 </body>
 
