completed initial working

--- a/CSS-Company-Portfolio/contact.html
+++ b/CSS-Company-Portfolio/contact.html
@@ -270,6 +270,7 @@
             padding: 50px 145px;
             height: 280px;
             background-color: #298529;
+            /* display: flex; */
 
         }
 
@@ -370,6 +371,12 @@
             /* border: 2px solid #298529; */
             margin-top: 20px;
             font-family: 'Open Sans', sans-serif;
+        }
+        #num1, #num2, #email{
+            font-family: 'Baloo Bhai 2', cursive;
+            text-decoration: none;
+            color: black;
+
         }
         
     </style>
