--- a/CSS-Company-Portfolio/about.html
+++ b/CSS-Company-Portfolio/about.html
@@ -12,53 +12,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/about.css">
     <title>About-PanaCloud</title>
     <style>
         
 
-        .main {
-            /* border: 2px solid red; */
-            display: flex;
-            justify-content: stretch;
-        }
-
-        .left {
-            /* border: 2px solid blue; */
-            width: 490px;
-            padding: 25px;
-            font-family: 'Open Sans', sans-serif;
-        }
-
-        .right {
-            /* border: 2px solid green; */
-            width: 510px;
-            font-family: 'Open Sans', sans-serif;
-        }
-        .right img{
-            height: 450px;
-            width: 510px;
-        }
-        .lowerbtn {
-            position: absolute;
-            left: 27px;
-            width: 130px;
-            height: 38px;
-            top: 560px;
-            background-color: #f5da16;
-            font-family: 'Baloo Bhai 2', cursive;
-            text-align: center;
-            font-size: 17px;
-            padding: 5px;
-            border-radius: 5px;
-        }
-        .lowerbtn a{
-            color: black;
-            text-decoration: none; 
-        }
-        .lowerbtn a:hover{
-            color: black;
-            text-decoration:underline;
-        }
+        
     </style>
 </head>
 
