--- a/CSS-Company-Portfolio/process.html
+++ b/CSS-Company-Portfolio/process.html
@@ -12,36 +12,10 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/process.css">
     <title>Process-Panacloud</title>
     <style>
 
-        .toptext {
-            display: inline-block;
-            /* border: 2px solid blue; */
-            width: 75%;
-            position: relative;
-            left: 120px;
-            text-align: center;
-            font-family: 'Open Sans', sans-serif;
-        }
-
-        .mainbox {
-            /* border: 2px solid green; */
-            display: flex;
-            justify-content: space-around;
-            margin-top: 50px;
-        }
-
-        .imgtext {
-            text-align: center;
-            font-family: 'Open Sans', sans-serif;
-            width: 150px;
-
-        }
-
-        .imgtext h3 {
-            font-family: 'Baloo Bhai 2', cursive;
-        }
         
 
         
