--- a/CSS-Company-Portfolio/skills.html
+++ b/CSS-Company-Portfolio/skills.html
@@ -12,30 +12,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/skills.css">
     <title>Skills-PanaCloud</title>
     <style>
         
-        .toptext {
-            display: inline-block;
-            /* border: 2px solid blue; */
-            width: 75%;
-            position: relative;
-            left: 120px;
-            text-align: center;
-            font-family: 'Open Sans', sans-serif;
-        }
 
-        .main {
-            /* border: 2px solid red; */
-            font-family: 'Open Sans', sans-serif;
-            display: flex;
-            justify-content: space-evenly;
-            margin-top: 50px;
-        }
-        .progress h4{
-            font-family: 'Baloo Bhai 2', cursive;
-            text-align: center;
-        }
     </style>
 </head>
 
