completed final assignment

--- a/CSS-Company-Portfolio/about.html
+++ b/CSS-Company-Portfolio/about.html
@@ -80,7 +80,7 @@
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque commodi assumenda, laboriosam modi fugiat rem eveniet eum earum illo. Illum impedit totam sunt ea possimus quis fugiat voluptatem, earum accusamus?</p>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae sapiente provident neque sequi corrupti quae hic, adipisci totam ullam dolores molestias eaque vel tenetur .</p>
             <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita, laboriosam cupiditate dolorem, obcaecati aperiam est consequuntur tempore nulla vero eos debitis libero. Fuga, in? Natus, corrupti! Iure excepturi omnis minima enim placeat porro possimus voluptatibus facilis libero? Excepturi quis?</p>
-            <button class="lowerbtn"><a href="#"> READ MORE</a></button>
+            <button class="lowerbtn"><a href="people.html"> READ MORE</a></button>
         </div>
         <div class="right">
             <img src="./assets/images/about-pic.jpg" alt="about-pic">
